syntax = "proto3";

option go_package = "github.com/Liar233/cronos-shovel/pkg";

package message;

import "google/protobuf/empty.proto";

service MessageService{
  rpc GetMessageList(GetMessageListRequest) returns (GetMessageListResponse) {}
  rpc CreateMessage(CreateMessageRequest) returns (CreateMessageResponse) {}
  rpc UpdateMessage(UpdateMessageRequest) returns (UpdateMessageResponse) {}
  rpc DeleteMessage(DeleteMessageRequest) returns (google.protobuf.Empty) {}
}

message DelayObject {
  string id = 1;
  int64 dateTime = 2;
};

message MessageObject {
  string id = 1;
  string mask = 2;
  string title = 3;
  repeated string channels = 4;
  bytes payload = 5;
  repeated DelayObject delays = 6;
}

message GetMessageListRequest {}

message GetMessageListResponse {
  repeated MessageObject messages = 1;
}

message CreateMessageRequest {
  string mask = 1;
  string title = 2;
  repeated string channels = 3;
  bytes payload = 4;
}

message CreateMessageResponse {
  string id = 1;
  string mask = 2;
  string title = 3;
  repeated string channels = 4;
  bytes payload = 5;
}

message UpdateMessageRequest {
  string id = 1;
  string mask = 2;
  string title = 3;
  repeated string channels = 4;
  bytes payload = 5;
}

message UpdateMessageResponse {
  string id = 1;
  string mask = 2;
  string title = 3;
  repeated string channels = 4;
  bytes payload = 5;
}

message DeleteMessageRequest{
  string id = 1;
}
